// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CashinInSuccess renders correctly with a provider 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
      "overflow": "hidden",
      "padding": 32,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/images/fiat-exchange.png",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 18,
          "lineHeight": 24,
          "paddingBottom": 16,
          "paddingTop": 8,
        }
      }
    >
      cicoSuccess.title
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      cicoSuccess.bodyWithProvider, {"provider":"Moonpay"}
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "alignSelf": "stretch",
            "flex": 1,
            "flexDirection": "column",
            "minWidth": 200,
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#E4825F",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 120,
              "opacity": undefined,
              "paddingHorizontal": 24,
              "paddingVertical": 5,
            }
          }
          testID="SuccessContinue"
        >
          <Text
            accessibilityLabel="continue"
            maxFontSizeMultiplier={1}
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CashinInSuccess renders correctly without a provider 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
      "overflow": "hidden",
      "padding": 32,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 16,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/images/fiat-exchange.png",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 18,
          "lineHeight": 24,
          "paddingBottom": 16,
          "paddingTop": 8,
        }
      }
    >
      cicoSuccess.title
    </Text>
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      cicoSuccess.bodyWithoutProvider
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "alignSelf": "stretch",
            "flex": 1,
            "flexDirection": "column",
            "minWidth": 200,
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#E4825F",
              "height": 48,
              "justifyContent": "center",
              "minWidth": 120,
              "opacity": undefined,
              "paddingHorizontal": 24,
              "paddingVertical": 5,
            }
          }
          testID="SuccessContinue"
        >
          <Text
            accessibilityLabel="continue"
            maxFontSizeMultiplier={1}
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
